[package]
name = "tku"
version = "0.1.3"
edition = "2021"
authors = ["Franz Geffke <mail@gofranz.com>"]
license = "GPL-3.0-only"

[package.metadata.deb]
maintainer = "Franz Geffke <mail@gofranz.com>"
section = "utils"
assets = [
    ["target/release/tku", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/tku", dest = "/usr/bin/tku", mode = "755" },
]

[features]
default = []
sqlite = ["dep:rusqlite"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
directories = "6"
bitcode = { version = "0.6", features = ["serde"] }
rusqlite = { version = "0.38", features = ["bundled"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
toml = "0.8"
ureq = { version = "3", features = ["rustls"] }
walkdir = "2"
